# de_zoomcamp

./: .gitignore  2024-syllabus.csv  NOTE.txt  README.md  cert.py  envronment.yml  pg-test-connection.ipynb  pgadmin.docker-compose.yaml  requirements.txt  services.yml  tf_gpu_envronment.yml  tf_gpu_requirements.txt  upload-data.ipynb  upload-data1.ipynb
.trunk/: trunk.yaml
2_docker_sql/: Dockerfile  pipeline.py
analytics/: README.MD
dbt/: profiles.copy.yml  profiles.yml
dbt/bigquery/: .user.yml  README.md  dbt_project.yml  pyproject.toml
dbt/bigquery/macros/: resolve_destination_schema.sql  resolve_payment_type_desc.sql
dbt/bigquery/models/core/: dim_fhv_trips.hold  dim_taxi_trips.sql  dim_zone_lookup.sql  fct_taxi_monthly_zone_revenue.sql
dbt/bigquery/models/staging/: schema.yml  stg_fhv_tripdata.hold  stg_fhv_tripsdata  stg_green_tripdata.sql  stg_yellow_tripdata.sql
docker_sql/: Dockerfile  docker-compose.yaml  ingest-data.py  ingestData.py  pgadmin.txt  pipeline.py
docker_sql/pgadmin/: c6e1da54-b04e-49c2-8c25-f2a2b21c06a7  (+1 more)
kafka/: KAFKA.md  docker-compose.yml
linux/: Dockerfile
mage/: dataLoader.py  transform_data.py
spark/: README.md  docker-compose.yml  krish-naik-spark-tutorial.ipynb  pyproject.toml  spark.ipynb
spark/docker/: docker-compose.yml
spark/zoomcamp-code/: 03_test.ipynb  04_pyspark.ipynb  05_taxi_schema.ipynb  06_spark_sql.ipynb  07_groupby_join.ipynb  08_rdds.ipynb
temp/: pyproject.toml
terraform/: main.tf  terraform-install.txt  terraform.tfstate  terraform.tfstate.backup  variables.tf
terraform/keys/: gcp-creds.json
(+5 files in other folders)
