[project]
name = "spark"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Gregory Morris", email = "gwm1980@gmail.com"},
]
dependencies = [
    "pyspark>=3.5.1",
    "pypandoc>=1.13",
    "pandas>=2.2.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "NONE"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "jupyter>=1.0.0",
]
