[project]
name = "bigquery"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Gregory Morris", email = "gwm1980@gmail.com"},
]
dependencies = [
    "dbt-bigquery>=1.7.6",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "NONE"}


[tool.pdm]
distribution = false
